[package]
name = "pnet"
version = "0.19.0"
authors = [ "Robert Clipsham <robert@octarineparrot.com>" ]
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Cross-platform, low level networking using the Rust programming language."
readme = "README.md"
keywords = ["networking", "transport", "datalink", "packet", "protocol"]
categories = ["network-programming", "parser-implementations"]
build = "build.rs"

[features]
benchmark = []
netmap = ["pnet_datalink/netmap_sys"]
pcap = ["pnet_datalink/pcap"]
appveyor = []
travis = []

[dependencies]
libc = "0.2"
ipnetwork = "0.12"

pnet_base = { path = "pnet_base" }
pnet_sys = { path = "pnet_sys" }
pnet_datalink = { path = "pnet_datalink" }
pnet_transport = { path = "pnet_transport" }
pnet_packet = { path = "pnet_packet" }

[dev-dependencies]
time = ">=0.1"
