[package]
name = "pnet"
version = "0.28.0"
authors = [ "Robert Clipsham <robert@octarineparrot.com>" ]
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Cross-platform, low level networking using the Rust programming language."
readme = "README.md"
keywords = ["networking", "transport", "datalink", "packet", "protocol"]
categories = ["network-programming", "parser-implementations"]
build = "build.rs"

[features]
benchmark = []
netmap = ["pnet_datalink/netmap_sys", "pnet_datalink/netmap"]
pcap = ["pnet_datalink/pcap"]
appveyor = []
travis = []
serde = ["pnet_base/serde", "pnet_datalink/serde"]

[dependencies]
ipnetwork = "0.18.0"

pnet_base = { path = "pnet_base", version = "0.28.0" }
pnet_sys = { path = "pnet_sys", version = "0.28.0" }
pnet_datalink = { path = "pnet_datalink", version = "0.28.0" }
pnet_transport = { path = "pnet_transport", version = "0.28.0" }
pnet_packet = { path = "pnet_packet", version = "0.28.0" }

[dev-dependencies]
time = "0.3.5"
