[package]
name = "pnet_base"
version = "0.19.0"
authors = ["Robert Clipsham <robert@octarineparrot.com>", "Linus Färnstrand <faern@faern.net>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Fundamental base types and code used by pnet."
keywords = ["networking", "ethernet"]
categories = ["network-programming"]

[dependencies]
libc = "0.2"
