[package]
name = "pnet_base"
version = "0.31.0"
authors = ["Robert Clipsham <robert@octarineparrot.com>", "Linus Färnstrand <faern@faern.net>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Fundamental base types and code used by pnet."
readme = "../README.md"
keywords = ["networking", "ethernet"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
no-std-net = { version = "0.6.0", default-features = false }
serde = { version = "1.0.137", optional = true, default-features = false }

[dev-dependencies]
serde_test = "1.0.137"

[features]
std = ["no-std-net/std"]
default = ["std"]

[package.metadata.docs.rs]
# Enable the serde feature when generating docs on docs.rs, so the traits are visible
features = ["serde"]
