[package]
name = "pnet_datalink"
version = "0.26.0"
authors = ["Robert Clipsham <robert@octarineparrot.com>", "Linus Färnstrand <faern@faern.net>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Cross-platform, datalink layer networking."
readme = "../README.md"
keywords = ["networking", "datalink", "ethernet", "raw"]
categories = ["network-programming"]

[features]
netmap = []

[dependencies]
libc = "0.2.42"
ipnetwork = "0.16.0"
pnet_base = "0.26.0"
pnet_sys = { path = "../pnet_sys", version = "0.26.0" }

pcap = { version = "0.7", optional = true }
netmap_sys = { version = ">=0.0", optional = true, features = ["netmap_with_libs"] }
serde = { version = "~1", optional = true, default-features = false, features = [ "derive" ] }

[target.'cfg(windows)'.dependencies]
winapi = "0.3.8"

[package.metadata.docs.rs]
# Enable the serde feature when generating docs on docs.rs, so the traits are visible
features = ["serde"]
