[package]
name = "pnet_datalink"
version = "0.29.0"
authors = ["Robert Clipsham <robert@octarineparrot.com>", "Linus Färnstrand <faern@faern.net>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Cross-platform, datalink layer networking."
readme = "../README.md"
keywords = ["networking", "datalink", "ethernet", "raw"]
categories = ["network-programming"]
edition = "2021"

[features]
netmap = []

[dependencies]
libc = "0.2.97"
ipnetwork = "0.18.0"
pnet_base = { path = "../pnet_base", version = "0.29.0" }
pnet_sys = { path = "../pnet_sys", version = "0.29.0" }

pcap = { version = "0.8.1", optional = true }
netmap_sys = { version = "0.1.4", optional = true, features = ["netmap_with_libs"] }
serde = { version = "1.0.126", optional = true, default-features = false, features = [ "derive" ] }

[dev-dependencies]
pnet = { path = "../", version = "0.29.0" }

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[package.metadata.docs.rs]
# Enable the serde feature when generating docs on docs.rs, so the traits are visible
features = ["serde"]
