[package]
name = "pnet_macros"
version = "0.32.0"
authors = ["Robert Clipsham <robert@octarineparrot.com>", "Pierre Chifflier <chifflier@wzdftpd.net>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Automatic bit manipulation for binary data formats"
readme = "../README.md"
keywords = ["networking", "bitfields", "packet", "protocol"]
categories = ["network-programming", "parsing"]
edition = "2021"

[lib]
proc-macro = true

[features]
default = []
travis = []

[dev-dependencies]
pnet_macros_support = { path = "../pnet_macros_support", version = "0.32.0" }
trybuild = "1.0.61"

[dependencies]
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = { version = "1.0.95", features = ["full"] }
regex = "1.5.6"
