[package]
name = "pnet_macros"
version = "0.34.0"
authors = ["Robert Clipsham <robert@octarineparrot.com>", "Pierre Chifflier <chifflier@wzdftpd.net>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Automatic bit manipulation for binary data formats"
readme = "../README.md"
keywords = ["networking", "bitfields", "packet", "protocol"]
categories = ["network-programming", "parsing"]
edition = "2021"

[lib]
proc-macro = true

[features]
default = []
travis = []

[dev-dependencies]
pnet_macros_support = { path = "../pnet_macros_support", version = "0.34.0" }
trybuild = "1.0.81"

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.31"
syn = { version = "2.0.26", features = ["full"] }
regex = "1.9.1"
