[package]

name = "pnet_macros_support"
version = "0.2.0"
authors = ["Robert Clipsham <robert@octarineparrot.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Support library for libpnet_macros"
readme = "../README.md"
keywords = ["networking", "bitfields", "packet", "protocol"]
