[package]

name = "pnet_macros_support"
version = "0.34.0"
authors = ["Robert Clipsham <robert@octarineparrot.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Support library for libpnet_macros"
readme = "../README.md"
keywords = ["networking", "bitfields", "packet", "protocol"]
edition = "2021"

[dependencies]
pnet_base = { path = "../pnet_base", version = "0.34.0", default-features = false }
