[package]
name = "pnet_packet"
version = "0.29.0"
authors = ["Robert Clipsham <robert@octarineparrot.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Cross-platform, binary packet parsing and manipulation"
readme = "../README.md"
keywords = ["networking", "packet", "parsing", "raw"]
categories = ["network-programming", "parser-implementations"]
edition = "2018"

[dependencies]
pnet_base = { path = "../pnet_base", version = "0.29.0" }
pnet_macros_support = { path = "../pnet_macros_support", version = "0.29.0" }
pnet_macros = { path = "../pnet_macros", version = "0.29.0" }

[build-dependencies]
glob = "0.3.0"
