[package]
name = "pnet_sys"
version = "0.35.0"
authors = ["Robert Clipsham <robert@octarineparrot.com>", "Linus Färnstrand <faern@faern.net>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Access to network related system function and calls."
readme = "../README.md"
keywords = ["networking", "datalink", "ethernet", "raw"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
libc = "0.2.147"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [ "winsock2", "ws2ipdef" ] }
