[package]
name = "pnet_transport"
version = "0.25.0"
authors = ["Robert Clipsham <robert@octarineparrot.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Cross-platform, transport layer networking."
keywords = ["networking", "transport", "raw", "socket"]
categories = ["network-programming"]

[dependencies]
libc = "0.2.39"
pnet_base = "0.22.0"
pnet_sys = { path = "../pnet_sys", version = "0.25.0" }
pnet_packet = { path = "../pnet_packet", version = "0.25.0" }
