[package]
name = "pnet_transport"
version = "0.33.0"
authors = ["Robert Clipsham <robert@octarineparrot.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Cross-platform, transport layer networking."
readme = "../README.md"
keywords = ["networking", "transport", "raw", "socket"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
libc = "0.2.139"
pnet_base = { path = "../pnet_base", version = "0.33.0", default-features = false }
pnet_sys = { path = "../pnet_sys", version = "0.33.0" }
pnet_packet = { path = "../pnet_packet", version = "0.33.0" }

[features]
std = ["pnet_base/std"]
default = ["std"]
